fix the searching devise when it hasn't a list, it will break the view

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
   padding-bottom: 100px;
   display: flex;
   justify-content: center;
+  flex-direction: column-reverse;
+  margin-left: auto;
 }
  /* .app__postsRight {
    margin-left: 20px;
@@ -52,7 +54,16 @@
   font-size: 1.5rem;
 }
 
-.headerUsername {
-  /* margin-top: 10px; */
-  /* display: inline-block !important; */
+.searchWord {
+  position: fixed;
+  right: 15%;
+}
+
+@media (min-width: 35rem) {
+  .app__posts {
+    flex-direction: row;
+      
+    }
+
+ 
 }
